[package]
name = "env-extract"
version = "0.1.22"
authors = ["Duncan Lutz"]
edition = "2021"
description = "Extracts environment variables into Strings or Enums"
license = "MIT"
homepage = "https://github.com/duncanlutz/env-extract/"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.28"
proc-macro2 = "1.0"
syn = { version = "1.0.109", features = ["full", "parsing"] }